ICANLab/web-server-apache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server-apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-server-apache
  template:
    metadata:
      labels:
        app: web-server-apache
    spec:
      containers:
      - name: apache
        image: httpd:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/local/apache2/htdocs/
          name: web-content-volume
      volumes:
      - name: web-content-volume
        persistentVolumeClaim:
          claimName: web-content-pvc
